minor fixes
added responsive padding on a few sectoins and fixed bug where story images not showing.

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,7 +28,7 @@
     }
 
     @include respond(tab-port){
-      padding: 10rem 0;
+      padding: 10rem 5rem;
     }
 }
 
@@ -38,7 +38,7 @@
   margin-top: -12rem;
 
   @include respond(tab-port){
-    padding: 20rem 0 10rem 0; 
+    padding: 20rem 3rem 10rem 3rem; 
   }
 }
 
